[gd_scene load_steps=17 format=3 uid="uid://bucgrpok5275e"]

[ext_resource type="Script" path="res://JustinTheNPC.gd" id="1_irb2p"]
[ext_resource type="Texture2D" uid="uid://dsm2jmu6lhv74" path="res://Assets/Characters/Hero_27.png" id="2_46wvg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_olb6d"]
atlas = ExtResource("2_46wvg")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiwwf"]
atlas = ExtResource("2_46wvg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0p5c"]
atlas = ExtResource("2_46wvg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn3g1"]
atlas = ExtResource("2_46wvg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjuct"]
atlas = ExtResource("2_46wvg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kya5j"]
atlas = ExtResource("2_46wvg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys5kq"]
atlas = ExtResource("2_46wvg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qnk7"]
atlas = ExtResource("2_46wvg")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lro5"]
atlas = ExtResource("2_46wvg")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhaxb"]
atlas = ExtResource("2_46wvg")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mft7g"]
atlas = ExtResource("2_46wvg")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i45uk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olb6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiwwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0p5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn3g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjuct")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kya5j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys5kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qnk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lro5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhaxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mft7g")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nnymp"]
radius = 6.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b6dpk"]
radius = 24.0208

[node name="JustinTheNPC" type="CharacterBody2D"]
position = Vector2(259, 13)
collision_layer = 2
script = ExtResource("1_irb2p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_i45uk")
animation = &"walk"
frame = 3
frame_progress = 0.995009
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_nnymp")
debug_color = Color(0.968627, 0, 0.478431, 0.419608)

[node name="ChatDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatDetectionArea"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_b6dpk")
debug_color = Color(0.439216, 0.6, 0, 0.419608)

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="ChatDetectionArea" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="ChatDetectionArea" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
